# lpm_plot

./: README.md  pyproject.toml
jupyter/: experiments.ipynb  fidelity-plot.ipynb  marginal-1d-plot.ipynb
src/lpm_plot/: __init__.py  plot_fidelity.py  plot_marginal.py
tests/: test_plot_fidelity.py  test_plot_marginal.py  test_plot_marginal_1d.py
tests/resources/: hand-written-observed.csv  hand-written-synthetic.csv
