[tool.poetry]
name = "lpm_plot"
version = "0.0.1"
license = "Apache-2.0"
description = ""
authors = ["Ulli Schaechtle <ulli@mit.edu>"]
readme = "README.md"
packages = [{include = "lpm_plot", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
altair = "^5.4.1"
pandas = "^2.2.3" # Need pandas because of altair
polars = "^1.7.1"
pyarrow = "^17.0.0"
vegafusion = "^1.6.9"
vegafusion-python-embed = "^1.6.9"
vl-convert-python = "^1.7.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
jupyter = "^1.1.1"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
